--- a/index.html
+++ b/index.html
@@ -3,23 +3,59 @@
 
 <head>
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/logo.png" type="image/png">
-  <link rel="icon" type="image/svg+xml"
-    href="https://res.cloudinary.com/dhkpwi9ga/image/upload/v1735826340/gs8gxkiomuxgn6ndjjys.png" />
-  <title>Flytium Drones</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- Primary SEO -->
+  <title>Flytium Drones | Drone Training, Workshops, Repair & E-Commerce in India</title>
+  <meta name="description" content="Flytium Drones offers professional drone training, DGCA drone pilot workshops, drone repair services, and e-commerce for drone & IoT components in Gorakhpur, Uttar Pradesh, India. Learn, buy, and innovate with us.">
+  <meta name="keywords" content="
+    drone training Gorakhpur,
+    drone workshop Gorakhpur,
+    drone training Uttar Pradesh,
+    drone training India,
+    best drone institute India,
+    DGCA drone training Gorakhpur,
+    drone flying training UP,
+    buy drones online India,
+    drone shop Gorakhpur,
+    drone components India,
+    drone spare parts India,
+    drone repair Gorakhpur,
+    drone repair service UP,
+    IoT and drone training India,
+    agriculture drone training India,
+    survey drone training India,
+    drone mapping training Gorakhpur,
+    fixed-wing drone workshop India,
+    quadcopter training Gorakhpur,
+    multirotor drone workshop India,
+    drone pilot training Gorakhpur,
+    DGCA certified drone training UP,
+    drone e-commerce India,
+    buy IoT sensors India,
+    drone motors and ESC India,
+    Pixhawk drone India,
+    Naza drone controller India
+  ">
+  <meta name="author" content="Flytium Drones Pvt Ltd" />
+
+  <!-- Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="Flytium Drones | Drone Training, Workshops & E-Commerce" />
+  <meta property="og:description" content="Join Flytium Drones in Gorakhpur, UP for drone training, DGCA-certified pilot workshops, drone repair services, and e-commerce for drone components in India." />
+  <meta property="og:image" content="https://res.cloudinary.com/dhkpwi9ga/image/upload/v1735826340/gs8gxkiomuxgn6ndjjys.png" />
+  <meta property="og:url" content="https://flytiumdrones.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/logo.png" type="image/png">
+  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dhkpwi9ga/image/upload/v1735826340/gs8gxkiomuxgn6ndjjys.png" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Titillium+Web:wght@200;300;400;600;700;900&family=Pacifico&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 
 <body>
   <div id="root"></div>
