--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     <meta name="apple-mobile-web-app-title" content="Flytium Drones" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://flytiumdrones.com/" />
+    <link rel="canonical" href="https://www.flytiumdrones.com/" />
+
+    <!-- DNS Prefetch -->
+    <link rel="dns-prefetch" href="//flight-drone-eta.vercel.app" />
 
     <!-- Open Graph (Social Media Preview) -->
     <meta property="og:type" content="website" />
@@ -77,7 +80,11 @@
       property="og:image"
       content="https://res.cloudinary.com/dhkpwi9ga/image/upload/v1735826340/gs8gxkiomuxgn6ndjjys.png"
     />
-    <meta property="og:url" content="https://flytiumdrones.com" />
+    <meta property="og:url" content="https://www.flytiumdrones.com" />
+    <meta
+      property="og:image"
+      content="https://www.flytiumdrones.com/og-image.jpg"
+    />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card -->
@@ -125,9 +132,9 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Flytium Drones",
-        "url": "https://flytiumdrones.com",
-        "logo": "https://res.cloudinary.com/dhkpwi9ga/image/upload/v1735826340/gs8gxkiomuxgn6ndjjys.png",
+        "name": "FlytiumDrone",
+        "url": "https://www.flytiumdrones.com",
+        "logo": "https://www.flytiumdrones.com/logo.png",
         "description": "Professional drone training institute offering DGCA certified courses, workshops, repair services, and e-commerce platform for drone components",
         "address": {
           "@type": "PostalAddress",
@@ -153,11 +160,11 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Flytium Drones",
-        "url": "https://flytiumdrones.com",
+        "name": "FlytiumDrone",
+        "url": "https://www.flytiumdrones.com",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://flytiumdrones.com/store?search={search_term_string}",
+          "target": "https://www.flytiumdrones.com/store?search={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
