refactor: Simplify SEO titles, enhance Navbar styles, and optimize Hero component layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary SEO -->
-    <title>
-      Flytium Drones | Drone Training, Workshops, Repair & E-Commerce in India
-    </title>
+    <title>Flytium Drones</title>
     <meta
       name="description"
       content="Flytium Drones offers professional drone training, DGCA drone pilot workshops, drone repair services, and e-commerce for drone & IoT components in Gorakhpur, Uttar Pradesh, India. Learn, buy, and innovate with us."
